# Insider-Threat-Detection-System

./: .gitignore  Activity.cpp  Admin.cpp  Admin.h  CMakeLists.txt  Dockerfile  Employee.cpp  FileSize.cpp  LICENSE  README.md  SecurityManager.cpp  SecurityManager.h  Staff.cpp  index.html  main.cpp  package-lock.json  package.json  server.js
.github/workflows/: cpp-build.yml
ITDS/: .gitignore  Makefile  README.md
ITDS/include/: Activity.h  AuditTrail.h  Employee.h  FileSize.h  Repository.h  SecurityManager.h  SeniorAdmin.h  Staff.h  ThreatCounter.h  Utils.h
ITDS/src/: SecurityManager.cpp  SeniorAdmin.cpp  ThreatCounter.cpp  main.cpp
docs/: PROJECT_REPORT.docx  PROJECT_REPORT.md
tests/: test_main.cpp
